--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "strict": true,
     // Error when a value import is only used as a type.
     "importsNotUsedAsValues": "error",
-    "types": [
-      "@astrojs/image/client"
-    ]
+    // "types": [
+    //   "@astrojs/image/client"
+    // ]
   }
 }
