--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "daisyui": "^2.24.0"
+    "daisyui": "^2.24.0",
+    "react-icons": "^4.4.0"
   }
 }
